force-app/main/default/objects/Payment__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
    <valueSetDefinition>
        <value><fullName>Cash</fullName></value>
        <value><fullName>Card</fullName></value>
        <value><fullName>UPI</fullName></value>
        <value><fullName>Net Banking</fullName></value>
        <value><fullName>Wallet</fullName></value>
    </valueSetDefinition>
</valueSet>

</CustomField>