force-app/main/default/objects/Payment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
    <valueSetDefinition>
        <value><fullName>Success</fullName></value>
        <value><fullName>Failed</fullName></value>
        <value><fullName>Pending</fullName></value>
        <value><fullName>Refunded</fullName></value>
    </valueSetDefinition>
</valueSet>

</CustomField>