force-app/main/default/objects/Payment__c/fields/Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Transaction_ID__c</fullName>
    <label>Transaction ID</label>
    <type>Text</type>
    <length>120</length>

</CustomField>